--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "test:watch": "jest --watch",
     "test": "jest",
     "dev": "tsnd -r tsconfig-paths/register src/main.ts",
-    "start": "tsnd -r tsconfig-paths/register src/main.ts"
+    "start": "ts-node -r tsconfig-paths/register src/main.ts"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/glob": "^7.2.0",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/supertest": "^2.0.11",
+    "babel-jest": "^27.5.1",
     "jest": "^27.5.1",
     "prisma": "^3.10.0",
+    "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
